--- a/css/portifoliocss.css
+++ b/css/portifoliocss.css
@@ -657,6 +657,8 @@ header .icons i:hover{
 @media (max-width:768px){
     #menu-bar{
         display: initial;
+        margin-right: -2.4rem;
+        
     }
     header .navbar{
         position: absolute;
@@ -675,6 +677,11 @@ header .icons i:hover{
         padding: 1.5rem;
         margin: 1.5rem 0;
         
+    }
+
+    header .logo{
+        display:block;
+        margin:0 auto;
     }
     .container-contact{
         margin: 40px 0;
@@ -736,7 +743,7 @@ header .icons i:hover{
         font-size: 2.5rem;
     }
     header img{
-        width: 12vw;
+        width: 20vw;
 
     }
     #portfolio {
